add passowrd and reset password
